# templates-meson-standard-gstreamer

./: .pre-commit-config.yaml  README.md  meson.build  meson_options.txt
.github/: pull_request_template.md
docs/: gst-hotdoc-plugins-scanner.c  index.md  meson.build  sitemap.txt
docs/plugins/: all_index.md  gst_plugins_cache.json  meson.build  plugins_doc.md
ext/TODO/: gstTODO.c  gstTODO.h  gstTODOplugin.c  meson.build
gst-libs/gst/TODO/: meson.build
hooks/: gstreamer.hook
tests/check/: gstTODO_multiple_transitions.c
tests/examples/: gstTODO_example.c
