# Feature options
option('developer-mode', type : 'boolean', value : false, yield : true, description: 'Enable developer mode')
option('tests', type : 'feature', value : 'auto', yield : true, description : 'Build tests')
option('examples', type : 'feature', value : 'auto', yield : true, description : 'Build examples')
option('docs', type : 'combo', choices : ['enabled', 'disabled', 'only'],
        description : 'Build documentation. Use enabled to build project and documentation and only to build documentation only')
option('gst-doc-generate-gst-doc-cache', type : 'feature', value : 'auto', yield : false, description : 'Enable generation of gst cache')
option('profiling', type : 'feature', value : 'disabled', yield : true, description: 'Enable profiling building')

# Common options
option('package-name', type : 'string', yield : true,
       description : 'Package name to use in plugins')
option('package-origin', type : 'string', value : 'Unknown package origin', yield : true,
       description : 'Package origin URL to use in plugins')
